docs: add documentation in list openings
