# handler/listOpening.go
@@ -1,16 +1,34 @@
 package handler
 
 import (
+	"errors"
 	"net/http"
 
 	"github.com/ThuanyMendonca/gooportunities/schemas"
 	"github.com/gin-gonic/gin"
+	"gorm.io/gorm"
 )
 
+// @BasePath /api/v1
+
+// @Summary List openings
+// @Description List openings
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Success 200 {object} ListOpeningsResponse
+// @Failure 404 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /openings [get]
 func ListOpeningHandler(ctx *gin.Context) {
 	openings := []schemas.Opening{}
 
 	if err := db.Find(&openings).Error; err != nil {
+		if errors.Is(gorm.ErrRecordNotFound, err) {
+			sendError(ctx, http.StatusNotFound, "openings not found")
+			return
+		}
+
 		sendError(ctx, http.StatusInternalServerError, "error listing openings")
 		return
 	}
